--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.11",
     "autoprefixer": "10.4.15",
     "expo": "^49.0.7",
+    "lucide-react": "^0.282.0",
     "next": "13.4.15",
     "postcss": "8.4.27",
     "react": "18.2.0",
